Intervant done a faire : Typemachine Etablissement

--- a/gmagro/src/main/resources/com/mycompany/gmagro/appli.fxml
+++ b/gmagro/src/main/resources/com/mycompany/gmagro/appli.fxml
@@ -71,7 +71,7 @@
                                           <Insets right="25.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button fx:id="btnImp" mnemonicParsing="false" onMouseClicked="#clicImport" text="ExportCVS" />
+                                    <Button fx:id="btnImp" mnemonicParsing="false" onMouseClicked="#clicImport" text="ImportCVS" />
                                  </children>
                               </HBox>
                            </children>
