--- a/gmagro/src/main/resources/com/mycompany/gmagro/appli.fxml
+++ b/gmagro/src/main/resources/com/mycompany/gmagro/appli.fxml
@@ -33,7 +33,24 @@
           </TitledPane>
           <TitledPane animated="false" text="Sites">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="670.0" prefWidth="625.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="670.0" prefWidth="625.0">
+                     <children>
+                        <VBox layoutX="-1.0" prefHeight="687.0" prefWidth="801.0">
+                           <children>
+                              <MapView fx:id="mvEtab" prefHeight="373.0" prefWidth="801.0" />
+                              <TableView fx:id="tableViewEtablissement" prefHeight="200.0" prefWidth="200.0">
+                                <columns>
+                                  <TableColumn fx:id="tablecolumnAdrs" prefWidth="330.0" text="Address" />
+                                  <TableColumn fx:id="tablecolumnCp" prefWidth="99.0" text="codePostal" />
+                                    <TableColumn fx:id="tablecolumnVille" minWidth="0.0" prefWidth="125.0" text="ville" />
+                                    <TableColumn fx:id="tablecolumnModif" minWidth="0.0" prefWidth="102.0" text="modifier" />
+                                    <TableColumn fx:id="tablecolumnSupp" minWidth="0.0" prefWidth="144.0" text="supprimer" />
+                                </columns>
+                              </TableView>
+                              <Button fx:id="btnAjouEtab" mnemonicParsing="false" onMouseClicked="#clicAddEtab" text="ajouter Etablissement" />
+                           </children>
+                        </VBox>
+                     </children></AnchorPane>
             </content>
           </TitledPane>
           <TitledPane animated="false" prefHeight="693.0" prefWidth="627.0" text="Intervenant">
